[gd_scene load_steps=2 format=3 uid="uid://3wokym7tp8hl"]

[ext_resource type="Script" path="res://Scenes/Dialog/DialogScreen.gd" id="1_j2lh3"]

[node name="DialogueScreen" type="VBoxContainer"]
clip_contents = true
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 20.0
offset_right = -50.0
offset_bottom = -20.0
alignment = 1
script = ExtResource("1_j2lh3")

[node name="DialogScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DialogContainer" type="VBoxContainer" parent="DialogScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="Dialog" type="RichTextLabel" parent="DialogScrollContainer/DialogContainer"]
visible = false
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent semper faucibus diam, sed efficitur justo euismod vitae. Sed molestie dolor id tincidunt finibus. Nullam imperdiet massa purus, in eleifend eros dignissim a. In libero lacus, pulvinar vitae felis eget, cursus lacinia lacus. Nunc egestas eros lectus, nec vestibulum quam eleifend sed. Curabitur dapibus, urna sed sodales tempor, lectus magna rhoncus erat, sit amet fermentum enim ipsum eget augue. Fusce ipsum velit, bibendum id elementum non, consequat eget lorem. Nullam et ligula mollis, rhoncus nulla at, varius erat. Cras hendrerit turpis eget lacinia gravida. Nulla pulvinar erat sed eleifend dignissim. "
fit_content = true
scroll_active = false

[node name="Dialog2" type="RichTextLabel" parent="DialogScrollContainer/DialogContainer"]
visible = false
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent semper faucibus diam, sed efficitur justo euismod vitae. Sed molestie dolor id tincidunt finibus. Nullam imperdiet massa purus, in eleifend eros dignissim a. In libero lacus, pulvinar vitae felis eget, cursus lacinia lacus. Nunc egestas eros lectus, nec vestibulum quam eleifend sed. Curabitur dapibus, urna sed sodales tempor, lectus magna rhoncus erat, sit amet fermentum enim ipsum eget augue. Fusce ipsum velit, bibendum id elementum non, consequat eget lorem. Nullam et ligula mollis, rhoncus nulla at, varius erat. Cras hendrerit turpis eget lacinia gravida. Nulla pulvinar erat sed eleifend dignissim. "
fit_content = true
scroll_active = false

[node name="Dialog3" type="RichTextLabel" parent="DialogScrollContainer/DialogContainer"]
visible = false
layout_mode = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent semper faucibus diam, sed efficitur justo euismod vitae. Sed molestie dolor id tincidunt finibus. Nullam imperdiet massa purus, in eleifend eros dignissim a. In libero lacus, pulvinar vitae felis eget, cursus lacinia lacus. Nunc egestas eros lectus, nec vestibulum quam eleifend sed. Curabitur dapibus, urna sed sodales tempor, lectus magna rhoncus erat, sit amet fermentum enim ipsum eget augue. Fusce ipsum velit, bibendum id elementum non, consequat eget lorem. Nullam et ligula mollis, rhoncus nulla at, varius erat. Cras hendrerit turpis eget lacinia gravida. Nulla pulvinar erat sed eleifend dignissim. "
fit_content = true
scroll_active = false

[node name="DialogOptions" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="OptionButton" type="Button" parent="DialogOptions"]
layout_mode = 2
text = "Option 1"

[node name="OptionButton2" type="Button" parent="DialogOptions"]
layout_mode = 2
text = "Option 2
"

[node name="OptionButton3" type="Button" parent="DialogOptions"]
layout_mode = 2
text = "Option 3"

[node name="OptionButton4" type="Button" parent="DialogOptions"]
layout_mode = 2
text = "Option 4"

[connection signal="pressed" from="DialogOptions/OptionButton" to="." method="_button_1_pressed"]
[connection signal="pressed" from="DialogOptions/OptionButton2" to="." method="_button_2_pressed"]
[connection signal="pressed" from="DialogOptions/OptionButton3" to="." method="_button_3_pressed"]
[connection signal="pressed" from="DialogOptions/OptionButton4" to="." method="_button_4_pressed"]
